--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "dev": "supervisor --harmony app",
+    "start": "supervisor --harmony app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
